--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -37,7 +37,7 @@
       <script src="https://kit.fontawesome.com/045292f471.js" crossorigin="anonymous"></script>
 
     <script>var Alert = ReactBootstrap.Alert;</script>
-    <title>React App</title>
+    <title>Santhi Raju</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
